# unlavarel

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  vitest.config.js
.github/workflows/: build.yml  pages.yml
docs/: index.html  robots.txt  sitemap.xml
docs/wiki/: Architecture.md  CI-CD.md  Contributing.md  DNS-and-SSL.md  Design-System.md  Getting-Started.md  Home.md  Mail-Testing.md  Package-Managers.md  Projects.md  Roadmap.md  Services.md
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: packages.toml
src-tauri/src/: database.rs  discovery.rs  dns.rs  elevated.rs  error.rs  lib.rs  logs.rs  mail.rs  main.rs  php.rs  projects.rs  quickapp.rs  services.rs  settings.rs  setup.rs  sharing.rs  snapshots.rs  ssl.rs  tray.rs  updater.rs  vhosts.rs
src-tauri/src/package_manager/: apt.rs  homebrew.rs  mod.rs  pacman.rs  winget.rs
src-tauri/src/platform/: detect.rs  mod.rs  permissions.rs
src-tauri/src/registry/: mod.rs
src-tauri/src/service_manager/: brew_services.rs  mod.rs  systemd.rs  windows_service.rs
src/lib/: utils.js  utils.test.js
src/lib/components/: ConfigEditor.svelte  DbViewer.svelte  Icon.svelte  ImportProjectDialog.svelte  MailViewer.svelte  PasswordDialog.svelte  PhpManager.svelte  QuickAppDialog.svelte  ServiceCard.svelte  SettingsPage.svelte  SetupWizard.svelte  SharingPanel.svelte  Sidebar.svelte  SiteList.svelte  SnapshotsPanel.svelte  StatusBar.svelte  Terminal.svelte  Titlebar.svelte  (+1 more)
(+3 files in other folders)
